updated form thomas

--- a/public/index.html
+++ b/public/index.html
@@ -42,5 +42,21 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <div id="push"></div>
+    <footer>
+      <div className="footer-links">
+        Damien -
+        Thomas -
+        Kyota -
+        Alexandre -
+        Michaël -
+        Luis -
+        Karine -
+        Marie-Isabelle
+      </div>
+      <div className="footer-copyright">
+        Blockchain and Shop Hackathon - 18/02/2018
+      </div>
+    </footer>
   </body>
 </html>
